this commit is for creating the code of  get all employees